# skchat

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE-SETUP.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  DAEMON_INTEGRATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSION.md  QUICKSTART.md  README.md  SECURITY.md  SKCHAT.md  SKILL.md  SOP.md  config.example.yml  package.json  pyproject.toml  skchat.md  skill.yaml
.github/workflows/: ci.yml  publish.yml  pytest.yml  qa.yml
deploy/: Dockerfile.daemon  Dockerfile.voice  Dockerfile.webui  README.md  SECRETS.md  provision-secrets.sh  render-secrets.py  skstack01-stack.yml
deploy/coturn/: README.md  start-coturn.sh  turnserver.conf
deploy/env-templates/: bridge-memory.env.example  coturn.secret.example  guest-token.env.example  guest.env.example  livekit.yaml.example  memory-pg.env.example  telegram-lumina.env.example  telegram-opus.env.example  webui-chef.env.example  webui-lumina.env.example  webui-opus.env.example
deploy/sql/: skchat_bridge_role.sql  skchat_bridge_role_rollback.sql
deploy/stacks/: README-same-origin.md  README.md  backup.md  coturn-stack.yml  livekit-stack.yml  make-secrets.sh  secrets.example  skchat-stack.yml
deploy/v2/: README.md  backup.md  coturn-stack.yml  egress-stack.yml  garage-stack.yml  livekit-stack.yml  media-plane.env.example  skchat-prod.env.example  skchat-stack.yml
docs/: 2026-07-14-arch-review-dm-stack.md  2026-07-15-sovereign-invite-join-architecture.md  ARCHITECTURE.md  BOOTSTRAP.md  SPACES.md  WEBAPP-AND-API-ARCHITECTURE.md  comms-suite-plan.md  comms-suite-research.json  crypto-architecture.md  hermes-channel-epic.md  lumina-everywhere-sprint-plan.md  mcp-reference.md  quantum-resistance-architecture.md  skchat-unified-client-federation-plan.md  skos-files-extend-plan.md  skos-gtd-plan.md  skos-ingest-plan.md  sovereign-conf-calls-plan.md
docs/deploy-plan/: skchat-bulletproof-deploy.md
docs/qa/: QA_TEST_PLAN.md  skworld-comms-verification-matrix.md
docs/runbooks/: cold-machine-deploy.md  hls-cast.md  mobile-guest-call-conf.md  stream-kodi-via-skchat.md
docs/sprint/: SESSION-HANDOFF-2026-06-17.md  epics-roadmap-2026-06.md
flutter/: .flutter-plugins-dependencies  README.md  pubspec.yaml
flutter/.dart_tool/: package_config.json  package_graph.json
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/scripts/: launch-linux.sh
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter_app/: .flutter-plugins-dependencies  .gitignore  BUILD_SUMMARY.md  HANDOFF.md  README.md  STATUS.md  analysis_options.yaml  pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_graph.json
flutter_app/android/: build.gradle  gradle.properties  local.properties  settings.gradle
flutter_app/lib/: app.dart  main.dart
flutter_app/test/: widget_test.dart
flutter_prd_backup/: PRD.md
launchd/: com.skcapstone.skchat-daemon.plist  com.skcapstone.skchat-lumina-bridge.plist  com.skcapstone.skchat-opus-bridge.plist
openclaw-plugin/: package.json
openclaw-plugin/src/: index.ts  openclaw.plugin.json
runbooks/: browser-call-test.md  cross-host-federation.md  federation-fqid-realm.md  funnel-ingress-verify.md  glossa-over-space.md  live-adapter-test.md  spaces-recording.md  voice-message-live.md
runbooks/cross-instance-call-test/: README.md  call.html  drive.py
runbooks/two-sfu-federation/: README.md  apply-acl.sh  drive_fed.py  observability.md  setup-jarvis-sfu.sh  tailnet-policy-grant.json
scripts/: align_federation_fqid.sh  backfill_message_log.py  backup-skchat.sh  bootstrap-node.sh  bootstrap.sh  bridge-supervisor.py  bridge-supervisor.sh  bridge_consciousness.py  bridge_paths.py  bridge_watchdog.py  check-health.sh  e2e-conf-verify.sh  erotic-router.py  gcv_e2e.py  generate-peers-from-agents.py  health-probe.sh  install-livekit.sh  jarvis-heartbeat.py  lumina-bridge.py  lumina-call.py  lumina-join-call.py  lumina-livekit-agent.py  mcp-config-inject.sh  mcp-test.sh  nostr_relay.py  nvidia-agent.sh  opus-bridge.py  piper_tts_server.py  preflight_adapter.py  preflight_federation.py  preflight_glossa.py  preflight_glossa_live.py  preflight_voice.py  publish-did.sh  qa_suite.sh  qa_two_browser.py  qa_two_party.py  rate-image.py  restore-skchat.sh  run-worship-session.py  (+13 more)
src/skchat/: __init__.py  _daemon_entry.py  adapter_bind.py  adapter_hub.py  advocacy.py  agent_comm.py  agent_model.py  agent_profile.py  app_link.py  atrest_wrap.py  attachments.py  call_observability.py  call_orchestrator.py  call_routes.py  call_session.py  cli.py  connectivity.py  context.py  crypto.py  daemon.py  daemon_proxy.py  daemon_proxy_groupcall.py  daemon_proxy_groups.py  dataplane_auth.py  dataplane_paths.py  dm_manager.py  (+60 more)
src/skchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: README.md  TAILSCALE-INGRESS.md  install.sh  skchat-bridges.target  skchat-daemon.service  skchat-lumina-bridge.service  skchat-lumina-call.service  skchat-lumina-call.service.d-musetalk.conf  skchat-opus-bridge.service  tailscale-ingress.sh
tests/: conftest.py  test_3way_chat.py  test_adapter_bind.py  test_adapter_hub.py  test_advocacy.py  test_agent_comm.py  test_agent_model.py  test_agent_profile.py  test_app_link.py  test_atrest_migration.py  test_atrest_wrap.py  test_attachments.py  test_bridge_loop_guard.py  test_bridge_paths.py  test_bridge_watchdog.py  test_call_integration.py  test_call_observability.py  test_call_orchestrator.py  test_call_routes.py  test_call_session.py  test_cli.py  test_cli_consent.py  test_conf_agent.py  test_conf_fed_agent.py  test_conf_fed_client.py  test_conf_room.py  test_conf_routes.py  test_conf_ui.py  test_connectivity.py  test_context.py  test_crypto.py  test_crypto_pqc_q3.py  test_crypto_ratchet.py  test_crypto_signing_degraded.py  test_daemon.py  test_daemon_async.py  test_daemon_group.py  test_daemon_group_persist.py  test_daemon_integration.py  test_daemon_proxy_groupcall.py  (+160 more)
(+414 files in other folders)
